grocery-mart/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: grocery-mart
  labels:
    name: grocery-mart
